application with full funcionality

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,30 @@
     <groupId>groupId</groupId>
     <artifactId>ProgramowanieII_javafx_MS1</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.zenjava</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>8.6.0</version>
+                <configuration>
+                    <mainClass>com.sda.javafx.Main</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     
 </project>
